fixed horizontal scroll issue

--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -19,6 +19,7 @@ body {
   justify-content: center;
   align-items: center;
   font-weight: 500;
+  overflow-x: hidden;
 }
 
 .main-wrapper {
